<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_2"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/welcome_frame"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/background_1">

        <ImageView
            android:id="@+id/picdeck_img"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_10"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/pikdeck_alt" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/dp_15"
            android:text="@string/welcome"
            android:textColor="@color/absoluteLight"
            android:textSize="35sp"
            android:fontFamily="monospace"
            android:textAlignment="center" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_mobile_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_frame"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        app:startIconDrawable="@drawable/ic_username_black_24dp"
        android:hint="@string/email_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_mobile_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_frame"
            android:textSize="@dimen/sp_15" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_mobile_field"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_7"
        app:startIconDrawable="@drawable/ic_password_black_24dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_frame"
            android:inputType="textPassword"
            android:textSize="@dimen/sp_15" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/dp_7"
        android:paddingStart="0dp"
        android:text="@string/remember_me"
        android:layout_below="@+id/password_field"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:checked="true" />

    <Button
        android:id="@+id/check_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remember_me"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/submit"
        android:background="@drawable/button_background_1"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_below="@id/check_auth">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:layout_weight="0.9">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15">

                <TextView
                    android:id="@+id/signin_suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:text="@string/or_sign_in"
                    android:textStyle="bold"
                    android:textColor="@color/absoluteDark"
                    android:fontFamily="monospace" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toStartOf="@id/signin_suggestion"
                    android:background="@color/absoluteDark" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@id/signin_suggestion"
                    android:background="@color/absoluteDark" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="@dimen/sep_half"
                    android:background="@drawable/button_background_3"
                    android:drawableStart="@drawable/google"
                    android:text="@string/google"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/absoluteDark"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:paddingStart="@dimen/dp_15"
                    android:paddingEnd="@dimen/dp_15" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="@dimen/sep_half"
                    android:background="@drawable/button_background_3"
                    android:drawableStart="@drawable/facebook"
                    android:text="@string/facebook"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/absoluteDark"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:paddingStart="@dimen/dp_15"
                    android:paddingEnd="@dimen/dp_15" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="@dimen/sep_half"
                    android:background="@drawable/button_background_3"
                    android:drawableStart="@drawable/twitter"
                    android:text="@string/twitter"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/absoluteDark"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:paddingStart="@dimen/dp_15"
                    android:paddingEnd="@dimen/dp_15" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="@dimen/sep_half"
                    android:background="@drawable/button_background_3"
                    android:drawableStart="@drawable/github"
                    android:text="@string/github"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/absoluteDark"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:paddingStart="@dimen/dp_15"
                    android:paddingEnd="@dimen/dp_15" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background_2"
                android:text="@string/register" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>